# TulparLang

./: .clinerules  .gitattributes  .gitignore  .markdownlint.json  AGENTS.md  ARRAYJSON_KULLANIM.md  BUILD_COMPARISON.md  CHANGELOG.md  CHANGELOG_DETAILED.md  CLAUDE.md  CMakeLists.txt  CMakePresets.json  CROSS_PLATFORM_SUMMARY.md  DONGULER.md  EKSIKLER.md  FAZ1_RAPOR.md  FAZ1_UYGULAMA.md  FAZ2_GUNCEL_RAPOR.md  FAZ2_RAPOR.md  FEATURES_PROGRESS.md  GELECEK_OZELLIKLER.md  GITHUB_ACTIONS_FIX.md  HIZLI_BASLANGIC_ONERILERI.md  INPUT_ORNEKLER.md  KULLANIM.md  LICENSE  MATH_FUNCTIONS.md  MODULAR_YAPIYA_GECIS.md  Makefile  OZET.md  PLATFORM_SUPPORT.md  QUICKSTART.md  QUICK_INSTALL.md  README.md  README_EN.md  REFACTORING_PLAN.md  RELEASING.md  STATUS.md  TIP_GUVENLIKLI_DIZILER.md  TULPAR_ANALYSIS.md  (+24 more)
.github/workflows/: auto-merge.yml  bench.yml  build.yml
.opencode/: config.json
benchmarks/: CI.md  RESULTS.json  RESULTS.md  WINGS_STRESS.md  WINGS_VS_FASTAPI.md  ackermann.c  ackermann.go  ackermann.js  ackermann.py  ackermann.rs  ackermann.tpr  benchmark.c  benchmark.go  benchmark.js  benchmark.php  benchmark.rs  benchmark.tpr  benchmark_aot.tpr  ci_run.py  compare_benchmark.py  fib.c  fib.go  fib.java  fib.js  fib.py  fib.rs  fib.tpr  http_bench.py  loadtest.c  loopsum.c  loopsum.go  loopsum.java  loopsum.js  loopsum.py  loopsum.rs  loopsum.tpr  run_benchmarks.ps1  run_benchmarks.sh  run_stress.sh  sieve.c  (+29 more)
build-linux/: Makefile
build-win/: Makefile
cmake/: EmbedLibraries.cmake  FindLLVM.cmake
docs/: CNAME  KULLANIM.md  MATH_FUNCTIONS.md  PLATFORM_SUPPORT.md  QUICKSTART.md  index.html
examples/: 01_hello_world.olang  01_hello_world.tpr  02_basics.tpr  02_control_flow.olang  02_control_flow.tpr  03_interactive.tpr  03_loops.olang  03_loops.tpr  04_functions.olang  04_functions.tpr  04_math_logic.tpr  05_arrays.olang  05_arrays.tpr  05_strings.tpr  06_data_structures.tpr  06_interactive.olang  06_interactive.tpr  07_modules.tpr  07_number_game.olang  08_calculator.olang  08_calculator.tpr  08_file_io.tpr  09_advanced_functions.olang  09_socket_client.tpr  09_socket_server.tpr  09_socket_simple.tpr  09_turkish_hello.tpr  10_for_in_test.tpr  10_test_phase1.olang  10_try_catch.tpr  11_router_app.tpr  11_test_phase2.tpr  12_calculator_interactive.olang  12_threaded_server.tpr  13_database.tpr  13_json_arrays.olang  13_json_arrays.tpr  14_api_server.tpr  14_json_objects.olang  14_json_objects.tpr  (+95 more)
examples/inputs/: 03_interactive.txt  06_interactive.txt  07_number_game.txt  08_calculator.txt
examples/wings_mvc/: app.tpr
examples/wings_static/: app.tpr
git/: COMMIT_EDITMSG  FETCH_HEAD  ORIG_HEAD  REBASE_HEAD  config  index  packed-refs
git/gk/: config
git/info/: refs
git/logs/: HEAD
git/refs/: stash
github/workflows/: auto-merge.yml  build.yml
installer/: tulpar.iss
installer/assets/: build_assets.ps1
lib/: async.tpr  http_client.tpr  http_utils.tpr  middleware.tpr  orm.tpr  router.tpr  socket.tpr  test.tpr  tulpar_api.tpr  wings.tpr  wings_tls.tpr
plans/: 01_method_calls.md  02_pkg_registry.md  03_typeinfer_strict.md  04_native_structs.md  05_generics.md  06_async_await.md  07_debugger.md  README.md
runtime/: tulpar_arc.c  tulpar_arc.cpp  tulpar_arc.h  tulpar_async.cpp  tulpar_async.h  tulpar_native.c  tulpar_native.cpp  tulpar_native.h
scripts/: install.ps1  install.sh
src/: embedded_libs.h.in  main.c  main.cpp
src/aot/: CMakeLists.txt  README.md  aot_pipeline.c  aot_pipeline.cpp  aot_pipeline.h  aot_pipeline.hpp  benchmark.c  benchmark.py  benchmark.tpr  build_codegen.ps1  build_test.ps1  llvm_backend.c  llvm_backend.cpp  llvm_backend.h  llvm_backend.hpp  llvm_backend_modern.cpp  llvm_backend_modern.hpp  llvm_test.c  llvm_test_arrays.c  llvm_test_objects.c  llvm_test_ops.c  llvm_types.c  llvm_types.cpp  llvm_types.h  llvm_types.hpp  llvm_values.c  llvm_values.cpp  llvm_values.h  llvm_values.hpp  math.tpr  struct_check.c  test_codegen.c  test_func.tpr  test_hello.tpr  test_if.tpr  test_int.tpr  test_loop.tpr  test_vars.tpr  tulpar_aot.c
src/cli/: debug_cmd.cpp  debug_cmd.hpp  doc_cmd.cpp  doc_cmd.hpp  line_edit.cpp  line_edit.hpp  typecheck_cmd.cpp  typecheck_cmd.hpp  update_cmd.cpp  update_cmd.hpp
src/common/: diagnostics.cpp  diagnostics.hpp  http_fetch.cpp  http_fetch.hpp  localization.cpp  localization.hpp  platform.h  platform_dl.h  platform_sockets.h  platform_threads.h  version.hpp
src/fmt/: formatter.cpp  formatter.hpp
src/interpreter/: interpreter.c  interpreter.cpp  interpreter.h  interpreter.hpp  thread_impl.c
src/jit/: jit.h  jit.hpp  jit_compiler.c  jit_compiler.cpp  jit_memory.c  jit_memory.cpp  jit_optimize.c  jit_optimize.cpp  x64_emit.c  x64_emit.cpp  x64_emit.h  x64_emit.hpp
src/lexer/: lexer.c  lexer.cpp  lexer.h  lexer.hpp
src/lsp/: builtins.cpp  builtins.hpp  document_index.cpp  document_index.hpp  lsp_server.cpp  lsp_server.hpp
src/parser/: ast_nodes.hpp  ast_visitor.hpp  import_alias.cpp  import_alias.hpp  parser.c  parser.cpp  parser.h  parser.hpp
src/pkg/: manifest.cpp  manifest.hpp  pkg_cli.cpp  pkg_cli.hpp  sha256.cpp  sha256.hpp  tpkg.cpp  tpkg.hpp
src/typeinfer/: typeinfer.c  typeinfer.cpp  typeinfer.h  (+3 more)
tests/: async.test.tpr  async_wings_smoke.py  autopersist.test.tpr  bool_to_int_coerce.test.tpr  break.test.tpr  capture_debug.tpr  closure_basic.test.tpr  closure_capture.test.tpr  compare_fastapi_users_api.py  compare_wings_users_api.tpr  dap_smoke.py  datetime.test.tpr  db_params.test.tpr  defaultargs.test.tpr  errors.test.tpr  fmt_smoke.py  funcref.test.tpr  http.test.tpr  http_client_smoke.py  json.test.tpr  json_edges.test.tpr  keepalive_smoke.py  listen_async_smoke.py  listen_evented_smoke.py  listen_pool_smoke.py  lsp_smoke.py  match.test.tpr  match_destructure.test.tpr  math.test.tpr  methods.test.tpr  null_literal.test.tpr  parse_smoke.py  password_kdf.test.tpr  persist.test.tpr  pkg_smoke.py  production_smoke.py  router.test.tpr  sha256_smoke.cpp  stdlib_extras.test.tpr  stdlib_phase_a.test.tpr  (+10 more)
wasm/: CMakeLists.txt  build_wasm.sh  runtime_bindings_wasm.c  tulpar_wasm_api.c  tulpar_wasm_api.h
(+447 files in other folders)
